test/typechecker.d/invalid/data3.surc.bad
def enum Bool = { Ohno CantDoThat }
